# emergent-values

./: .cursorignore  .gitignore  pyproject.toml
choices/: README.md  __init__.py  experiment.py  llm_agent.py  results.py  utils.py  variable.py
choices/analysis/: __init__.py  create_exchange_rates_plots.py  predictive_analysis.py
choices/config/: compute_utilities.yaml  create_agent.yaml  models.yaml
choices/core/: __init__.py  experiment.py  variable.py
choices/data/: patients.yaml  prompt_configs.yaml
choices/examples/: exchange_rates_example.py  simple_example.py
choices/experiments/: evacuation.py  example.py  exchange_rates.py  medical_triage.py  simple_example.py
choices/utilities/: __init__.py  compute_utilities.py  models.py  thurstonian.py
utility_analysis/: README.md  create_exchange_rates_plots.py  experiments.yaml  models.yaml  run_experiments.py
utility_analysis/compute_utilities/: compute_utilities.py  compute_utilities.yaml  create_agent.yaml  models.py  templates.py  utils.py
utility_analysis/experiments/decision_modeling/: create_country_features.py  decision_modeling_classification.py  decision_modeling_preprocessing.py  decision_modeling_preprocessing_discrete.py  decision_modeling_regression.py
utility_analysis/experiments/exchange_rates/: evaluate_exchange_rates.py
utility_analysis/experiments/factor_based_prompts/: evaluate_factor_based_prompts.py
utility_analysis/experiments/maximization/: utility_maximization.py
utility_analysis/notebooks/: gpt4o-mini-country_vs_country-reasons-1.csv  reasons.ipynb  reasons.py
(+39 files in other folders)
